[package]
name = "hellorust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
clap = { version = "4.3.11", features = ["derive"] }
error-chain = "0.12.4"
flate2 = "1.0.26"
prost = "0.11.9"
